--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       position:relative;
     }
 
-    /* BG effect */
+    /* Background glow */
     body::before,body::after{
       content:"";
       position:absolute;
@@ -35,63 +35,62 @@
     body::before{width:380px;height:380px;background:#ffb3c6;top:-80px;left:-60px;}
     body::after{width:420px;height:420px;background:#b3e6ff;bottom:-120px;right:-40px;animation-delay:3s;}
 
-    @keyframes floatBg{from{transform:translate3d(0,0,0);}to{transform:translate3d(25px,-30px,0);}}
+    @keyframes floatBg{from{transform:translate3d(0,0,0);}to{transform:translate3d(25px,-30px,0);} }
 
-    /* Hearts */
+    /* Floating hearts */
     .floating-hearts{
-      position:fixed;inset:0;z-index:0;pointer-events:none;overflow:hidden;
+      position:fixed; inset:0; z-index:0; pointer-events:none; overflow:hidden;
     }
     .floating-hearts span{
-      position:absolute;bottom:-40px;font-size:1.4rem;
+      position:absolute; bottom:-40px; font-size:1.4rem;
       color:rgba(255,120,156,.7);
       animation:riseHeart linear infinite;
     }
     @keyframes riseHeart{
       0%{transform:translate3d(0,0,0) scale(.8);opacity:0;}
       10%{opacity:1;}
-      100%{transform:translate3d(var(--x-move,0px),-120vh,0) scale(1.2);opacity:0;}
+      100%{transform:translate3d(var(--x,0px),-120vh,0) scale(1.2);opacity:0;}
     }
 
     /* Container */
     .container{
-      position:relative;z-index:1;width:100%;max-width:960px;
-      background:rgba(255,255,255,.9);border-radius:28px;
-      padding:32px 22px 36px;box-shadow:0 22px 40px rgba(0,0,0,.12);
+      position:relative; z-index:1;
+      width:100%; max-width:960px;
+      background:rgba(255,255,255,.9);
+      border-radius:28px;
+      padding:32px 22px 36px;
+      box-shadow:0 22px 40px rgba(0,0,0,.12);
       backdrop-filter:blur(16px);
     }
 
-    header{text-align:center;margin-bottom:18px;}
+    header{text-align:center;}
     .header-tagline{text-transform:uppercase;font-size:.78rem;letter-spacing:.22em;color:#b19ac1;margin-bottom:6px;}
     .names-line{font-family:"Great Vibes";font-size:3.2rem;color:#e2578c;display:flex;justify-content:center;gap:10px;}
-    .and-heart{animation:pulseHeart 1.8s ease-in-out infinite;font-size:1.7rem;color:#ff769c;}
-    @keyframes pulseHeart{0%,100%{transform:scale(1);}40%{transform:scale(1.17);}70%{transform:scale(.96);}}
-    .nikah-line{color:#7b6a8e;font-size:.94rem;margin-top:8px;}
+    .and-heart{font-size:1.7rem;color:#ff769c;animation:pulse 1.8s infinite;}
+    @keyframes pulse{0%,100%{transform:scale(1);}40%{transform:scale(1.17);}70%{transform:scale(.96);}}
+
+    .nikah-line{color:#7b6a8e;margin-top:8px;font-size:.94rem;}
 
     .date-pill{
-      display:inline-flex;gap:8px;padding:8px 18px;margin-top:18px;
+      display:inline-flex;gap:8px;margin-top:18px;padding:8px 18px;
       background:linear-gradient(120deg,#ffe1eb,#ffe6ff);
-      border-radius:999px;font-size:.9rem;color:#795474;
+      border-radius:999px;color:#795474;font-size:.9rem;
     }
     .date-pill-dot{width:5px;height:5px;border-radius:50%;background:#ff95b5;}
 
     /* Countdown */
-    .content{display:grid;gap:24px;}
+    .content{display:grid;gap:24px;margin-top:24px;}
     @media(min-width:768px){.content{grid-template-columns:1.3fr 1fr;}}
 
     .countdown-card{
       background:linear-gradient(150deg,#fff,#fff4fa);
       padding:20px;border-radius:22px;box-shadow:0 10px 26px rgba(255,143,178,.18);
-      position:relative;
     }
-
-    .countdown-title{
-      font-family:"Playfair Display";font-size:1.18rem;color:#493350;margin-bottom:10px;
-    }
-
-    .countdown-subtitle{color:#8a7299;font-size:.9rem;margin-bottom:18px;}
+    .countdown-title{font-family:"Playfair Display";font-size:1.18rem;color:#493350;margin-bottom:10px;}
+    .countdown-subtitle{color:#8a7299;margin-bottom:18px;}
 
     .countdown-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px;}
-    @media(min-width:600px){.countdown-grid{grid-template-columns:repeat(4,1fr);}}
+    @media(min-width:600px){.countdown-grid{grid-template-columns:repeat(4,1fr);} }
 
     .time-box{
       background:radial-gradient(circle at top,#ffe7f2,#ffffff);
@@ -99,54 +98,40 @@
     }
     .time-number{font-size:1.9rem;color:#e0548b;font-weight:600;}
     .time-label{text-transform:uppercase;font-size:.72rem;color:#8e6e9b;}
-    .dua-line{margin-top:10px;color:#7c6a8b;font-size:.9rem;}
+    .dua-line{margin-top:10px;color:#7c6a8b;}
 
     /* Story */
     .story-card{
       background:linear-gradient(150deg,#fdfbff,#ffeef6);
       padding:18px;border-radius:22px;box-shadow:0 10px 24px rgba(176,143,214,.2);
     }
-    .story-title{font-family:"Playfair Display";margin-bottom:10px;}
+    .story-title{font-family:"Playfair Display";margin-bottom:10px;font-size:1.05rem;}
     .story-text{color:#6c5877;font-size:.9rem;line-height:1.6;margin-bottom:10px;}
     .urdu-line{color:#7b648b;font-size:.86rem;}
 
-    /* Music button */
-    .music-btn{
-      margin-top:24px;
-      display:inline-block;
-      background:#ff8eb3;
-      color:white;
-      padding:10px 20px;
-      border:none;
-      border-radius:25px;
-      font-size:0.95rem;
-      cursor:pointer;
-      transition:0.2s;
-      box-shadow:0 4px 12px rgba(255,120,156,.3);
-    }
-    .music-btn:hover{
-      background:#ff6f9d;
-      transform:translateY(-2px);
-    }
-
     /* Footer */
-    .footer-note{text-align:center;margin-top:18px;color:#aa94b8;font-size:.78rem;}
+    .footer-note{text-align:center;margin-top:22px;color:#aa94b8;font-size:.78rem;}
+    
+    /* Hidden audio */
+    #bgMusic{display:none;}
   </style>
 </head>
 
 <body>
+
   <div class="floating-hearts"></div>
 
   <div class="container">
-
-    <!-- HEADER -->
+  
     <header>
       <div class="header-tagline">Bismillah · With Love & Duas</div>
+
       <div class="names-line">
         <span>Soheil</span>
         <span class="and-heart">♥</span>
         <span>Wafiya</span>
       </div>
+
       <p class="nikah-line">
         InshaAllah, on this day, two hearts, two families, and two duaas become one journey. 🤍
       </p>
@@ -158,13 +143,11 @@
       </div>
     </header>
 
-    <!-- MAIN -->
     <main class="content">
 
-      <!-- COUNTDOWN -->
+      <!-- Countdown -->
       <section class="countdown-card">
         <h2 class="countdown-title">Counting down to forever</h2>
-
         <p class="countdown-subtitle">
           Every second brings Soheil a little closer to saying “Qubool hai” to his beloved, Wafiya.
         </p>
@@ -177,9 +160,7 @@
             <div class="time-box"><div id="seconds" class="time-number">0</div><div class="time-label">Seconds</div></div>
           </div>
 
-          <p class="dua-line">
-            Ya Allah, fill this new home of Soheil &amp; Wafiya with sakoon, mercy, and endless love. آمین
-          </p>
+          <p class="dua-line">Ya Allah, fill this new home of Soheil &amp; Wafiya with sakoon, mercy, and endless love. آمین</p>
         </div>
 
         <p id="after-message" style="display:none;">
@@ -187,21 +168,18 @@
         </p>
       </section>
 
-      <!-- STORY -->
+      <!-- Story -->
       <section class="story-card">
         <h3 class="story-title">A little love note…</h3>
-
         <p class="story-text">
           Somewhere between duas whispered at tahajjud and quiet wishes in the heart,
           <em>Soheil found his forever in Wafiya</em>.
         </p>
-
         <p class="story-text">
           This countdown isn’t just numbers on a screen.
           It’s every heartbeat, every smile,
           and every “Alhamdulillah” for the blessing of finding your person.
         </p>
-
         <p class="urdu-line">
           <strong>Roman Urdu:</strong><br>
           “Tum meri duaa ka woh hissa ho jo kabhi ‘Aameen’ ke bina na chuti.”
@@ -210,36 +188,34 @@
 
     </main>
 
-    <!-- MUSIC BUTTON -->
-    <button class="music-btn" id="musicBtn">Play Music 🎵</button>
-
+    <!-- Hidden audio -->
     <audio id="bgMusic" loop>
       <source src="music.mp3" type="audio/mpeg">
     </audio>
 
-    <!-- FOOTER -->
     <p class="footer-note">
       Handcrafted with ❤ by Soheil, for his better half.
     </p>
+
   </div>
 
   <script>
     /* Countdown */
-    const weddingDate = new Date("December 24, 2025 21:00:00").getTime();
+    const target = new Date("December 24, 2025 21:00:00").getTime();
     const daysEl = document.getElementById("days");
     const hoursEl = document.getElementById("hours");
     const minutesEl = document.getElementById("minutes");
     const secondsEl = document.getElementById("seconds");
-    const afterMessage = document.getElementById("after-message");
-    const wrapper = document.getElementById("countdown-wrapper");
+    const afterMsg = document.getElementById("after-message");
+    const wrap = document.getElementById("countdown-wrapper");
 
-    function updateCountdown(){
+    function tick(){
       const now = new Date().getTime();
-      const diff = weddingDate - now;
+      const diff = target - now;
 
       if(diff <= 0){
-        wrapper.style.display = "none";
-        afterMessage.style.display = "block";
+        wrap.style.display="none";
+        afterMsg.style.display="block";
         return;
       }
 
@@ -253,38 +229,34 @@
       minutesEl.textContent = String(m%60).padStart(2,"0");
       secondsEl.textContent = String(s%60).padStart(2,"0");
     }
-    setInterval(updateCountdown,1000); updateCountdown();
+    tick();
+    setInterval(tick,1000);
 
     /* Floating hearts */
     const hearts = document.querySelector(".floating-hearts");
-    function createHeart(){
+    function makeHeart(){
       const h = document.createElement("span");
       h.textContent = "❤";
-      h.style.left = Math.random()*100 + "%";
-      h.style.fontSize = (1 + Math.random()*1.2) + "rem";
-      h.style.setProperty("--x-move", ((Math.random()*80)-40) + "px");
+      h.style.left = Math.random()*100+"%";
+      h.style.fontSize = (1+Math.random()*1.2)+"rem";
+      h.style.setProperty("--x", ((Math.random()*80)-40)+"px");
       h.style.animationDuration = (8+Math.random()*6)+"s";
       hearts.appendChild(h);
       setTimeout(()=>h.remove(),15000);
     }
-    setInterval(createHeart,700);
+    setInterval(makeHeart,700);
 
-    /* Music button */
+    /* Auto music play (muted trick) */
     const music = document.getElementById("bgMusic");
-    const btn = document.getElementById("musicBtn");
-    let isPlaying = false;
-
-    btn.onclick = () => {
-      if(!isPlaying){
-        music.play();
-        btn.textContent = "Pause Music ⏸️";
-        isPlaying = true;
-      } else {
-        music.pause();
-        btn.textContent = "Play Music 🎵";
-        isPlaying = false;
-      }
-    };
+    
+    window.addEventListener("load", () => {
+      music.muted = true;
+      music.play().then(() => {
+        setTimeout(()=>{
+          music.muted = false;
+        }, 300);
+      }).catch(()=>{});
+    });
   </script>
 
 </body>
