--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;500;600&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
 
   <style>
-    *{margin:0;padding:0;box-sizing:border-box;}
+    * { margin:0; padding:0; box-sizing:border-box; }
+
     body{
       min-height:100vh;
       font-family:Poppins,sans-serif;
@@ -23,7 +24,7 @@
     }
 
     /* Background glow */
-    body::before,body::after{
+    body::before, body::after{
       content:"";
       position:absolute;
       border-radius:50%;
@@ -32,30 +33,45 @@
       z-index:0;
       animation:floatBg 18s ease-in-out infinite alternate;
     }
-    body::before{width:380px;height:380px;background:#ffb3c6;top:-80px;left:-60px;}
-    body::after{width:420px;height:420px;background:#b3e6ff;bottom:-120px;right:-40px;animation-delay:3s;}
-
-    @keyframes floatBg{from{transform:translate3d(0,0,0);}to{transform:translate3d(25px,-30px,0);} }
+    body::before{
+      width:380px;height:380px;
+      background:#ffb3c6;
+      top:-80px;left:-60px;
+    }
+    body::after{
+      width:420px;height:420px;
+      background:#b3e6ff;
+      bottom:-120px;right:-40px;
+      animation-delay:3s;
+    }
+    @keyframes floatBg{
+      from{transform:translate3d(0,0,0);}
+      to  {transform:translate3d(25px,-30px,0);}
+    }
 
     /* Floating hearts */
     .floating-hearts{
-      position:fixed; inset:0; z-index:0; pointer-events:none; overflow:hidden;
+      position:fixed; inset:0;
+      z-index:0; pointer-events:none; overflow:hidden;
     }
     .floating-hearts span{
-      position:absolute; bottom:-40px; font-size:1.4rem;
+      position:absolute; bottom:-40px;
+      font-size:1.4rem;
       color:rgba(255,120,156,.7);
       animation:riseHeart linear infinite;
     }
     @keyframes riseHeart{
-      0%{transform:translate3d(0,0,0) scale(.8);opacity:0;}
-      10%{opacity:1;}
+      0%  {transform:translate3d(0,0,0) scale(.8);opacity:0;}
+      10% {opacity:1;}
       100%{transform:translate3d(var(--x,0px),-120vh,0) scale(1.2);opacity:0;}
     }
 
     /* Container */
     .container{
-      position:relative; z-index:1;
-      width:100%; max-width:960px;
+      position:relative;
+      z-index:1;
+      width:100%;
+      max-width:960px;
       background:rgba(255,255,255,.9);
       border-radius:28px;
       padding:32px 22px 36px;
@@ -64,65 +80,209 @@
     }
 
     header{text-align:center;}
-    .header-tagline{text-transform:uppercase;font-size:.78rem;letter-spacing:.22em;color:#b19ac1;margin-bottom:6px;}
-    .names-line{font-family:"Great Vibes";font-size:3.2rem;color:#e2578c;display:flex;justify-content:center;gap:10px;}
-    .and-heart{font-size:1.7rem;color:#ff769c;animation:pulse 1.8s infinite;}
-    @keyframes pulse{0%,100%{transform:scale(1);}40%{transform:scale(1.17);}70%{transform:scale(.96);}}
+    .header-tagline{
+      text-transform:uppercase;
+      font-size:.78rem;
+      letter-spacing:.22em;
+      color:#b19ac1;
+      margin-bottom:6px;
+    }
 
-    .nikah-line{color:#7b6a8e;margin-top:8px;font-size:.94rem;}
+    .names-line{
+      font-family:"Great Vibes";
+      font-size:3.2rem;
+      color:#e2578c;
+      display:flex;
+      justify-content:center;
+      gap:10px;
+      flex-wrap:wrap;
+      line-height:1.1;
+    }
+    .and-heart{
+      font-size:1.7rem;
+      color:#ff769c;
+      animation:pulse 1.8s ease-in-out infinite;
+    }
+    @keyframes pulse{
+      0%,100%{transform:scale(1);}
+      40%{transform:scale(1.17);}
+      70%{transform:scale(.96);}
+    }
+
+    .nikah-line{
+      color:#7b6a8e;
+      margin-top:8px;
+      font-size:.94rem;
+    }
 
     .date-pill{
-      display:inline-flex;gap:8px;margin-top:18px;padding:8px 18px;
+      display:inline-flex;
+      justify-content:center;
+      align-items:center;
+      gap:8px;
+      margin-top:18px;
+      padding:8px 18px;
       background:linear-gradient(120deg,#ffe1eb,#ffe6ff);
-      border-radius:999px;color:#795474;font-size:.9rem;
+      border-radius:999px;
+      color:#795474;
+      font-size:.9rem;
+      flex-wrap:wrap;
+      text-align:center;
     }
-    .date-pill-dot{width:5px;height:5px;border-radius:50%;background:#ff95b5;}
+    .date-pill-dot{
+      width:5px;height:5px;
+      border-radius:50%;
+      background:#ff95b5;
+    }
 
-    /* Countdown */
-    .content{display:grid;gap:24px;margin-top:24px;}
-    @media(min-width:768px){.content{grid-template-columns:1.3fr 1fr;}}
+    /* Content layout */
+    .content{
+      display:grid;
+      gap:24px;
+      margin-top:24px;
+    }
+    @media(min-width:768px){
+      .content{ grid-template-columns:1.3fr 1fr; }
+    }
 
+    /* Countdown card */
     .countdown-card{
       background:linear-gradient(150deg,#fff,#fff4fa);
-      padding:20px;border-radius:22px;box-shadow:0 10px 26px rgba(255,143,178,.18);
+      padding:20px;
+      border-radius:22px;
+      box-shadow:0 10px 26px rgba(255,143,178,.18);
     }
-    .countdown-title{font-family:"Playfair Display";font-size:1.18rem;color:#493350;margin-bottom:10px;}
-    .countdown-subtitle{color:#8a7299;margin-bottom:18px;}
+    .countdown-title{
+      font-family:"Playfair Display";
+      font-size:1.18rem;
+      color:#493350;
+      margin-bottom:10px;
+    }
+    .countdown-subtitle{
+      color:#8a7299;
+      margin-bottom:18px;
+      font-size:.9rem;
+    }
 
-    .countdown-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:12px;}
-    @media(min-width:600px){.countdown-grid{grid-template-columns:repeat(4,1fr);} }
+    .countdown-grid{
+      display:grid;
+      grid-template-columns:repeat(2,1fr);
+      gap:12px;
+    }
+    @media(min-width:600px){
+      .countdown-grid{ grid-template-columns:repeat(4,1fr); }
+    }
 
     .time-box{
       background:radial-gradient(circle at top,#ffe7f2,#ffffff);
-      padding:12px;border-radius:18px;text-align:center;
+      padding:12px;
+      border-radius:18px;
+      text-align:center;
     }
-    .time-number{font-size:1.9rem;color:#e0548b;font-weight:600;}
-    .time-label{text-transform:uppercase;font-size:.72rem;color:#8e6e9b;}
-    .dua-line{margin-top:10px;color:#7c6a8b;}
+    .time-number{
+      font-size:1.9rem;
+      color:#e0548b;
+      font-weight:600;
+    }
+    .time-label{
+      text-transform:uppercase;
+      font-size:.72rem;
+      color:#8e6e9b;
+    }
+    .dua-line{
+      margin-top:10px;
+      color:#7c6a8b;
+      font-size:.9rem;
+    }
 
-    /* Story */
+    /* Story card */
     .story-card{
       background:linear-gradient(150deg,#fdfbff,#ffeef6);
-      padding:18px;border-radius:22px;box-shadow:0 10px 24px rgba(176,143,214,.2);
+      padding:18px;
+      border-radius:22px;
+      box-shadow:0 10px 24px rgba(176,143,214,.2);
     }
-    .story-title{font-family:"Playfair Display";margin-bottom:10px;font-size:1.05rem;}
-    .story-text{color:#6c5877;font-size:.9rem;line-height:1.6;margin-bottom:10px;}
-    .urdu-line{color:#7b648b;font-size:.86rem;}
+    .story-title{
+      font-family:"Playfair Display";
+      font-size:1.05rem;
+      margin-bottom:10px;
+    }
+    .story-text{
+      color:#6c5877;
+      font-size:.9rem;
+      line-height:1.6;
+      margin-bottom:10px;
+    }
+    .urdu-line{
+      color:#7b648b;
+      font-size:.86rem;
+    }
 
-    /* Footer */
-    .footer-note{text-align:center;margin-top:22px;color:#aa94b8;font-size:.78rem;}
-    
+    .footer-note{
+      text-align:center;
+      margin-top:22px;
+      color:#aa94b8;
+      font-size:.78rem;
+    }
+
     /* Hidden audio */
-    #bgMusic{display:none;}
+    #bgMusic{ display:none; }
+
+    /* 📱 Mobile tweaks */
+    @media (max-width: 600px) {
+      body{
+        padding:10px;
+      }
+      .container{
+        padding:22px 14px 26px;
+        border-radius:22px;
+        box-shadow:0 14px 26px rgba(0,0,0,0.10);
+      }
+      .header-tagline{
+        font-size:0.7rem;
+        letter-spacing:0.18em;
+      }
+      .names-line{
+        font-size:2.4rem;
+        gap:6px;
+      }
+      .nikah-line{
+        font-size:0.85rem;
+        padding:0 4px;
+      }
+      .date-pill{
+        font-size:0.8rem;
+        padding:6px 12px;
+      }
+      .countdown-card,
+      .story-card{
+        padding:14px 12px;
+      }
+      .time-box{
+        padding:10px 6px;
+      }
+      .time-number{
+        font-size:1.6rem;
+      }
+      .countdown-subtitle,
+      .dua-line,
+      .story-text,
+      .urdu-line{
+        font-size:0.82rem;
+      }
+      .footer-note{
+        font-size:0.72rem;
+      }
+    }
   </style>
 </head>
 
 <body>
-
   <div class="floating-hearts"></div>
 
   <div class="container">
-  
+
+    <!-- HEADER -->
     <header>
       <div class="header-tagline">Bismillah · With Love & Duas</div>
 
@@ -143,24 +303,40 @@
       </div>
     </header>
 
+    <!-- MAIN CONTENT -->
     <main class="content">
 
-      <!-- Countdown -->
+      <!-- COUNTDOWN -->
       <section class="countdown-card">
         <h2 class="countdown-title">Counting down to forever</h2>
+
         <p class="countdown-subtitle">
           Every second brings Soheil a little closer to saying “Qubool hai” to his beloved, Wafiya.
         </p>
 
         <div id="countdown-wrapper">
           <div class="countdown-grid">
-            <div class="time-box"><div id="days" class="time-number">0</div><div class="time-label">Days</div></div>
-            <div class="time-box"><div id="hours" class="time-number">0</div><div class="time-label">Hours</div></div>
-            <div class="time-box"><div id="minutes" class="time-number">0</div><div class="time-label">Minutes</div></div>
-            <div class="time-box"><div id="seconds" class="time-number">0</div><div class="time-label">Seconds</div></div>
+            <div class="time-box">
+              <div id="days" class="time-number">0</div>
+              <div class="time-label">Days</div>
+            </div>
+            <div class="time-box">
+              <div id="hours" class="time-number">0</div>
+              <div class="time-label">Hours</div>
+            </div>
+            <div class="time-box">
+              <div id="minutes" class="time-number">0</div>
+              <div class="time-label">Minutes</div>
+            </div>
+            <div class="time-box">
+              <div id="seconds" class="time-number">0</div>
+              <div class="time-label">Seconds</div>
+            </div>
           </div>
 
-          <p class="dua-line">Ya Allah, fill this new home of Soheil &amp; Wafiya with sakoon, mercy, and endless love. آمین</p>
+          <p class="dua-line">
+            Ya Allah, fill this new home of Soheil &amp; Wafiya with sakoon, mercy, and endless love. آمین
+          </p>
         </div>
 
         <p id="after-message" style="display:none;">
@@ -168,18 +344,21 @@
         </p>
       </section>
 
-      <!-- Story -->
+      <!-- STORY -->
       <section class="story-card">
         <h3 class="story-title">A little love note…</h3>
+
         <p class="story-text">
           Somewhere between duas whispered at tahajjud and quiet wishes in the heart,
           <em>Soheil found his forever in Wafiya</em>.
         </p>
+
         <p class="story-text">
           This countdown isn’t just numbers on a screen.
           It’s every heartbeat, every smile,
           and every “Alhamdulillah” for the blessing of finding your person.
         </p>
+
         <p class="urdu-line">
           <strong>Roman Urdu:</strong><br>
           “Tum meri duaa ka woh hissa ho jo kabhi ‘Aameen’ ke bina na chuti.”
@@ -188,15 +367,15 @@
 
     </main>
 
-    <!-- Hidden audio -->
+    <!-- HIDDEN MUSIC -->
     <audio id="bgMusic" loop>
       <source src="music.mp3" type="audio/mpeg">
     </audio>
 
+    <!-- FOOTER -->
     <p class="footer-note">
       Handcrafted with ❤ by Soheil, for his better half.
     </p>
-
   </div>
 
   <script>
@@ -213,49 +392,50 @@
       const now = new Date().getTime();
       const diff = target - now;
 
-      if(diff <= 0){
-        wrap.style.display="none";
-        afterMsg.style.display="block";
+      if (diff <= 0){
+        wrap.style.display = "none";
+        afterMsg.style.display = "block";
         return;
       }
 
-      const s = Math.floor(diff/1000);
-      const m = Math.floor(s/60);
-      const h = Math.floor(m/60);
-      const d = Math.floor(h/24);
+      const s = Math.floor(diff / 1000);
+      const m = Math.floor(s / 60);
+      const h = Math.floor(m / 60);
+      const d = Math.floor(h / 24);
 
-      daysEl.textContent = d;
-      hoursEl.textContent = String(h%24).padStart(2,"0");
-      minutesEl.textContent = String(m%60).padStart(2,"0");
-      secondsEl.textContent = String(s%60).padStart(2,"0");
+      daysEl.textContent    = d;
+      hoursEl.textContent   = String(h % 24).padStart(2, "0");
+      minutesEl.textContent = String(m % 60).padStart(2, "0");
+      secondsEl.textContent = String(s % 60).padStart(2, "0");
     }
     tick();
-    setInterval(tick,1000);
+    setInterval(tick, 1000);
 
     /* Floating hearts */
     const hearts = document.querySelector(".floating-hearts");
     function makeHeart(){
       const h = document.createElement("span");
       h.textContent = "❤";
-      h.style.left = Math.random()*100+"%";
-      h.style.fontSize = (1+Math.random()*1.2)+"rem";
-      h.style.setProperty("--x", ((Math.random()*80)-40)+"px");
-      h.style.animationDuration = (8+Math.random()*6)+"s";
+      h.style.left = Math.random() * 100 + "%";
+      h.style.fontSize = (1 + Math.random() * 1.2) + "rem";
+      h.style.setProperty("--x", ((Math.random()*80) - 40) + "px");
+      h.style.animationDuration = (8 + Math.random() * 6) + "s";
       hearts.appendChild(h);
-      setTimeout(()=>h.remove(),15000);
+      setTimeout(() => h.remove(), 15000);
     }
-    setInterval(makeHeart,700);
+    setInterval(makeHeart, 700);
 
-    /* Auto music play (muted trick) */
+    /* Auto music play (muted trick – still depends on browser) */
     const music = document.getElementById("bgMusic");
-    
     window.addEventListener("load", () => {
       music.muted = true;
       music.play().then(() => {
-        setTimeout(()=>{
+        setTimeout(() => {
           music.muted = false;
         }, 300);
-      }).catch(()=>{});
+      }).catch(() => {
+        // Some browsers may still block autoplay; nothing breaks if they do.
+      });
     });
   </script>
 
