--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       padding:20px;
       background:radial-gradient(circle at top,#ffe6f2,#fef6ff 35%,#e3f2ff 70%,#f8fff9);
       position:relative;
-      /* 👇 removed overflow:hidden so mobile can scroll */
     }
 
     /* Background glow */
@@ -80,12 +79,13 @@
     }
 
     header{text-align:center;}
+
     .header-tagline{
-      text-transform:uppercase;
       font-size:.78rem;
-      letter-spacing:.22em;
       color:#b19ac1;
-      margin-bottom:6px;
+      margin-bottom:8px;
+      letter-spacing:0.2em;
+      text-transform:uppercase;
     }
 
     .names-line{
@@ -111,8 +111,9 @@
 
     .nikah-line{
       color:#7b6a8e;
-      margin-top:8px;
+      margin-top:10px;
       font-size:.94rem;
+      font-weight:400;
     }
 
     .date-pill{
@@ -135,7 +136,7 @@
       background:#ff95b5;
     }
 
-    /* Content layout */
+    /* Layout */
     .content{
       display:grid;
       gap:24px;
@@ -162,6 +163,7 @@
       color:#8a7299;
       margin-bottom:18px;
       font-size:.9rem;
+      line-height:1.5;
     }
 
     .countdown-grid{
@@ -216,6 +218,7 @@
     .urdu-line{
       color:#7b648b;
       font-size:.86rem;
+      margin-top:8px;
     }
 
     .footer-note{
@@ -228,7 +231,7 @@
     /* Hidden audio */
     #bgMusic{ display:none; }
 
-    /* Tiny fallback music button (only shown if autoplay blocked) */
+    /* Tiny fallback button */
     .music-fallback-btn{
       position:fixed;
       right:14px;
@@ -242,60 +245,17 @@
       font-size:0.8rem;
       box-shadow:0 4px 10px rgba(0,0,0,.25);
       cursor:pointer;
-      display:none; /* default hidden */
-    }
-    .music-fallback-btn:hover{
-      background:#ff6f9d;
-      transform:translateY(-1px);
+      display:none;
     }
 
-    /* 📱 Mobile tweaks */
-    @media (max-width: 600px) {
-      body{
-        padding:10px;
-        align-items:flex-start; /* not too aggressively centered on small screens */
-      }
-      .container{
-        margin-top:16px;
-        padding:22px 14px 26px;
-        border-radius:22px;
-        box-shadow:0 14px 26px rgba(0,0,0,0.10);
-      }
-      .header-tagline{
-        font-size:0.7rem;
-        letter-spacing:0.18em;
-      }
-      .names-line{
-        font-size:2.4rem;
-        gap:6px;
-      }
-      .nikah-line{
-        font-size:0.85rem;
-        padding:0 4px;
-      }
-      .date-pill{
-        font-size:0.8rem;
-        padding:6px 12px;
-      }
-      .countdown-card,
-      .story-card{
-        padding:14px 12px;
-      }
-      .time-box{
-        padding:10px 6px;
-      }
-      .time-number{
-        font-size:1.6rem;
-      }
-      .countdown-subtitle,
-      .dua-line,
-      .story-text,
-      .urdu-line{
-        font-size:0.82rem;
-      }
-      .footer-note{
-        font-size:0.72rem;
-      }
+    /* Mobile optimization */
+    @media(max-width:600px){
+      body{padding:10px;align-items:flex-start;}
+      .container{margin-top:10px;padding:20px;}
+      .names-line{font-size:2.4rem;}
+      .countdown-card,.story-card{padding:14px;}
+      .story-text,.urdu-line,.dua-line{font-size:.82rem;}
+      .footer-note{font-size:.72rem;}
     }
   </style>
 </head>
@@ -303,14 +263,14 @@
 <body>
   <div class="floating-hearts"></div>
 
-  <!-- Tiny fallback button for music (only shows if autoplay is blocked) -->
+  <!-- Tiny fallback music button -->
   <button class="music-fallback-btn" id="musicFallback">Tap for music 🎵</button>
 
   <div class="container">
 
     <!-- HEADER -->
     <header>
-      <div class="header-tagline">Bismillah · With Love & Duas</div>
+      <div class="header-tagline">Bismillah • Allah brought you into my life exactly when I needed you 🤍</div>
 
       <div class="names-line">
         <span>Soheil</span>
@@ -337,7 +297,8 @@
         <h2 class="countdown-title">Counting down to forever</h2>
 
         <p class="countdown-subtitle">
-          Every second brings Soheil a little closer to saying “Qubool hai” to his beloved, Wafiya.
+          Every passing second brings Soheil closer to the moment he looks at Wafiya and says,  
+          “You’re my forever.”
         </p>
 
         <div id="countdown-wrapper">
@@ -361,33 +322,32 @@
           </div>
 
           <p class="dua-line">
-            Ya Allah, fill this new home of Soheil &amp; Wafiya with sakoon, mercy, and endless love. آمین
+            Ya Allah, bless this new home of Soheil &amp; Wafiya with sakoon, mercy, and endless love. آمین
           </p>
         </div>
 
         <p id="after-message" style="display:none;">
-          Nikah Mubarak, Soheil &amp; Wafiya! Today is the day your duaas turn into a shared forever. 🤍
+          Nikah Mubarak, Soheil &amp; Wafiya! Today is the day your duaas turn into a forever. 🤍
         </p>
       </section>
 
       <!-- STORY -->
       <section class="story-card">
-        <h3 class="story-title">A little love note…</h3>
+        <h3 class="story-title">A message from Soheil…</h3>
 
         <p class="story-text">
-          Somewhere between duas whispered at tahajjud and quiet wishes in the heart,
-          <em>Soheil found his forever in Wafiya</em>.
+          Wafiya, you came into my life like a quiet blessing — soft, gentle, and exactly when my heart needed you.
         </p>
 
         <p class="story-text">
-          This countdown isn’t just numbers on a screen.
-          It’s every heartbeat, every smile,
-          and every “Alhamdulillah” for the blessing of finding your person.
+          Every moment with you feels like a dua being answered.  
+          You’re not just someone I love…  
+          You’re my peace, my comfort, and the home my soul always longed for.
         </p>
 
         <p class="urdu-line">
           <strong>Roman Urdu:</strong><br>
-          “Tum meri duaa ka woh hissa ho jo kabhi ‘Aameen’ ke bina na chuti.”
+          “Tum woh dua ho jo maine dil se maangi… aur Allah ne muskurahat ke saath qubool karli.”
         </p>
       </section>
 
@@ -458,10 +418,8 @@
     window.addEventListener("load", () => {
       music.muted = true;
       music.play().then(() => {
-        // Autoplay worked, unmute shortly
         setTimeout(() => { music.muted = false; }, 300);
       }).catch(() => {
-        // Autoplay blocked, show tiny button
         music.muted = false;
         musicBtn.style.display = "inline-flex";
       });
