--- a/index.html
+++ b/index.html
@@ -65,6 +65,35 @@
       100%{transform:translate3d(var(--x,0px),-120vh,0) scale(1.2);opacity:0;}
     }
 
+    /* Music Toggle Button (top-right) */
+    .music-btn{
+      position:fixed;
+      top:14px;
+      right:14px;
+      z-index:5;
+      background:#ff8eb3;
+      color:#fff;
+      border:none;
+      border-radius:50%;
+      width:40px;
+      height:40px;
+      font-size:1.1rem;
+      box-shadow:0 4px 10px rgba(0,0,0,0.25);
+      cursor:pointer;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      transition:0.25s ease;
+    }
+    .music-btn:hover{
+      transform:scale(1.1);
+      background:#ff6f9d;
+    }
+    .music-btn.paused{
+      background:#d4d4d4;
+      color:#555;
+    }
+
     /* Container */
     .container{
       position:relative;
@@ -210,7 +239,11 @@
       color:#6c5877;
       font-size:.9rem;
       line-height:1.6;
-      margin-bottom:4px;
+      margin-bottom:10px;
+    }
+    .urdu-line{
+      color:#7b648b;
+      font-size:.86rem;
     }
 
     .footer-note{
@@ -259,7 +292,8 @@
       }
       .countdown-subtitle,
       .dua-line,
-      .story-text{
+      .story-text,
+      .urdu-line{
         font-size:0.82rem;
       }
       .footer-note{
@@ -271,6 +305,9 @@
 
 <body>
   <div class="floating-hearts"></div>
+
+  <!-- Top-right music toggle button -->
+  <button id="musicToggle" class="music-btn">🎵</button>
 
   <div class="container">
 
@@ -338,17 +375,29 @@
 
       <!-- STORY -->
       <section class="story-card">
-        <h3 class="story-title">🌸 A Blessed Beginning</h3>
+        <h3 class="story-title">A little love note…</h3>
 
         <p class="story-text">
-          May Allah write everlasting love between us.
+          Somewhere between duas whispered at tahajjud and quiet wishes in the heart,
+          <em>Soheil found his forever in Wafiya</em>.
+        </p>
+
+        <p class="story-text">
+          This countdown isn’t just numbers on a screen.
+          It’s every heartbeat, every smile,
+          and every “Alhamdulillah” for the blessing of finding your person.
+        </p>
+
+        <p class="urdu-line">
+          <strong>Roman Urdu:</strong><br>
+          “Tum meri duaa ka woh hissa ho jo kabhi ‘Aameen’ ke bina na chuti.”
         </p>
       </section>
 
     </main>
 
     <!-- HIDDEN MUSIC -->
-    <audio id="bgMusic" loop autoplay muted playsinline>
+    <audio id="bgMusic" loop>
       <source src="music.mp3" type="audio/mpeg">
     </audio>
 
@@ -405,16 +454,40 @@
     }
     setInterval(makeHeart, 700);
 
-    /* Try to unmute after autoplay starts */
+    /* Music logic */
     const music = document.getElementById("bgMusic");
+    const toggleBtn = document.getElementById("musicToggle");
+
+    // Try autoplay on load (muted trick)
     window.addEventListener("load", () => {
+      music.volume = 1.0;
+      music.muted = true;
       music.play().then(() => {
-        // If autoplay worked, unmute shortly
-        setTimeout(() => { music.muted = false; }, 300);
+        setTimeout(() => { 
+          music.muted = false; 
+          toggleBtn.classList.remove("paused");
+          toggleBtn.textContent = "🎵";
+        }, 300);
       }).catch(() => {
-        // Some browsers (esp. iOS Safari) block autoplay completely.
-        // In that case, user must tap the page once to start audio.
+        // Autoplay blocked; user can press button
+        music.muted = false;
+        toggleBtn.classList.add("paused");
+        toggleBtn.textContent = "🎵";
       });
+    });
+
+    // Play / pause on button click
+    toggleBtn.addEventListener("click", () => {
+      if (music.paused){
+        music.play().then(() => {
+          toggleBtn.classList.remove("paused");
+          toggleBtn.textContent = "🎵";
+        }).catch(() => {});
+      } else {
+        music.pause();
+        toggleBtn.classList.add("paused");
+        toggleBtn.textContent = "⏸";
+      }
     });
   </script>
 
