--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
         </p>
 
         <p class="urdu-line">
-          <strong>Roman Urdu:</strong><br>
-          “Tum meri duaa ka woh hissa ho jo kabhi ‘Aameen’ ke bina na chuti.”
+          <strong>A Blessed Beginning 🌸</strong><br>
+          “May Allah write everlasting love between us.”
         </p>
       </section>
 
