--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
         </p>
 
         <p class="urdu-line">
-          <strong>A Blessed Beginning 🌸</strong><br>
-          “May Allah write everlasting love between us.”
+          <strong>A Blessed Beginning </strong><br>
+          May Allah write everlasting love between us.
         </p>
       </section>
 
